Bug 614397.  Always descend through all placeholders while doing any sort of selection display list.  r=roc, a=roc