layout/base/nsDisplayList.h
@@ -205,11 +205,15 @@ public:
    */
   nsIFrame* GetIgnoreScrollFrame() { return mIgnoreScrollFrame; }
   /**
-   * Calling this setter makes us:
-   * 1. include all positioned descendant frames in the display list,
-   *    wherever they may be positioned (even outside the dirty rects).
-   * 2. exclude all leaf frames that does not have the NS_FRAME_SELECTED_CONTENT
-   *    bit.
+   * Calling this setter makes us include all out-of-flow descendant
+   * frames in the display list, wherever they may be positioned (even
+   * outside the dirty rects).
+   */
+  void SetIncludeAllOutOfFlows() { mIncludeAllOutOfFlows = PR_TRUE; }
+  PRBool GetIncludeAllOutOfFlows() const { return mIncludeAllOutOfFlows; }
+  /**
+   * Calling this setter makes us exclude all leaf frames that does
+   * not have the NS_FRAME_SELECTED_CONTENT bit.
    */
   void SetSelectedFramesOnly() { mSelectedFramesOnly = PR_TRUE; }
   PRBool GetSelectedFramesOnly() { return mSelectedFramesOnly; }
@@ -329,6 +333,17 @@ public:
    * Return the FrameLayerBuilder.
    */
   FrameLayerBuilder* LayerBuilder() { return &mLayerBuilder; }
+
+  /**
+   * Returns true if we need to descend into this frame when building
+   * the display list, even though it doesn't intersect the dirty
+   * rect, because it may have out-of-flows that do so.
+   */
+  bool ShouldDescendIntoFrame(nsIFrame* aFrame) const {
+    return
+      (aFrame->GetStateBits() & NS_FRAME_FORCE_DISPLAY_LIST_DESCEND_INTO) ||
+      GetIncludeAllOutOfFlows();
+  }
   
   /**
    * Allocate memory in our arena. It will only be freed when this display list
@@ -408,6 +423,7 @@ private:
   PRPackedBool                   mIgnoreSuppression;
   PRPackedBool                   mHadToIgnoreSuppression;
   PRPackedBool                   mIsAtRootOfPseudoStackingContext;
+  PRPackedBool                   mIncludeAllOutOfFlows;
   PRPackedBool                   mSelectedFramesOnly;
   PRPackedBool                   mAccurateVisibleRegions;
   // True when we're building a display list that's directly or indirectly
